--- a/scss/index/section-berry-slider.scss
+++ b/scss/index/section-berry-slider.scss
@@ -24,14 +24,14 @@
                     height: 20%;
                     width: 100%;
                     background-color: rgba(0, 0, 0, 0.5);
-                    z-index: 10;
+                    z-index: 9;
                     bottom: 0;
                     left: 0;
                     overflow: hidden;
 
                     &--wrapper {
                         position: relative;
-                        height: 100%;
+                        height: 100%;   
 
                         .image-title-item {
                             position: absolute;
